<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            android:layout_marginStart="28dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal" android:textSize="24sp"/>
    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroup2"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="28dp">
        <RadioButton
                android:text="@string/radiobtn3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/radioButton2"/>
        <RadioButton
                android:text="@string/radiobtn16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/radioButton5"/>
        <RadioButton
                android:text="@string/raido_btn1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/radioButton3" android:checked="true"/>
    </RadioGroup>
    <Button
            android:text="@string/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/button"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/switch1"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="" android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/editTextNumberDecimal"
            android:hint="@string/app_name"
            android:minHeight="48dp" android:textColorHint="#546E7A"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="28dp" android:layout_marginTop="32dp"/>
    <TextView
            tools:text="@string/TipAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView3"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/button" android:textSize="16sp"/>
    <Switch
            android:text="@string/Round_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/switch1"
            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="28dp"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup2" android:textSize="16sp"
            android:checked="true"/>
</androidx.constraintlayout.widget.ConstraintLayout>